Issue #10538. Put a reference to the source object in the Py_buffer when converting the old buffer for PyArgs_ParseTuple with *s